fixed scrollbar

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -16,11 +16,11 @@
     margin: 50px auto;
   }
 
-  .itemscart- {
+  .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
   }
 
   button {
